--- a/index.html
+++ b/index.html
@@ -134,5 +134,30 @@ done
         <li><a href="https://youtu.be/nuOQCSSoa5Y">Hipervínculos HTML</a></li>
         
     </ul>
+
+ <h2>Ejercicio Git y GitHub - Información del Alumno</h2>
+    <ol>
+        <li>Hacer un <strong>fork</strong> del repositorio <a href="https://github.com/SantexGroup/SantexAcademy" target="_blank">SantexGroup/SantexAcademy</a> en tu cuenta personal de GitHub.</li>
+        <li>Clonar el repositorio forkeado en tu ambiente local usando SSH:
+            <pre><code>git clone git@github.com:TU_USUARIO/SantexAcademy.git</code></pre>
+        </li>
+        <li>Crea una nueva rama con el nombre <code>informacion-alumno</code> usando el comando:
+            <pre><code>git branch informacion-alumno</code></pre>
+        </li>
+        <li>Cambia a la rama que acabas de crear usando el comando:
+            <pre><code>git checkout informacion-alumno</code></pre>
+        </li>
+        <li>Abre el archivo <code>README.md</code> en tu editor de texto preferido y agrega tu nombre, apellido, nacionalidad y email a la sección de información del proyecto.</li>
+        <li>Agrega los cambios que hiciste al archivo <code>README.md</code> a la zona de preparación usando el comando:
+            <pre><code>git add README.md</code></pre>
+        </li>
+        <li>Crea un nuevo commit con un mensaje descriptivo usando el comando:
+            <pre><code>git commit -m "Agrega información del alumno al README"</code></pre>
+        </li>
+        <li>Sube tus cambios a GitHub usando el comando:
+            <pre><code>git push origin informacion-alumno</code></pre>
+        </li>
+        <li>Crea una <strong>Pull Request</strong> en GitHub para fusionar tus cambios con la rama principal del repositorio.</li>
+    </ol>
 </body>
 </html>
