Add css con miniatura y target_blank

--- a/index.html
+++ b/index.html
@@ -218,5 +218,104 @@ cd SantexAcademy</code></pre>
         <h3>9. Crear una Pull Request</h3>
         <p>Ve a tu repositorio forkeado en GitHub y haz clic en <strong>Compare & pull request</strong>. Completa el título y la descripción, y crea la Pull Request.</p>
     </div>
+<!--<h3>Introducción a CSS - Presentación</h3>
+<ul>
+    <li><a href="https://youtu.be/Fsk06ZLCE2M">Introducción CSS</a></li>
+    <li><a href="https://youtu.be/O9FTMcgcaGA">Sintaxis CSS</a></li>
+    <li><a href="https://youtu.be/JNIeQAuJaCM">Selectores</a></li>
+    <li><a href="https://youtu.be/MXo-i-9JRSY">Presedencia</a></li>
+    <li><a href="https://youtu.be/aA2fMltFqN8">Box Model</a></li>
+    <li><a href="https://youtu.be/mBz5dzsNazg">Weight - Height</a></li>
+    <li><a href="https://youtu.be/5QPHenp9Cd8">Margin - CSS</a></li>
+    <li><a href="https://youtu.be/c7-Y56Ndabo">Padding</a></li>
+    <li><a href="https://youtu.be/FqMWxb7nzfQ">Border</a></li>
+    <li><a href="https://youtu.be/aY0F_rT__fc">Display</a></li>
+    <li><a href="https://youtu.be/fdsMgGuAHe8">Float</a></li>
+    <li><a href="https://youtu.be/r24lmXSGEQs">Flex Box</a></li>
+    <li><a href="https://youtu.be/Ow7MPzVUE4M">Bootstrap</a></li>
+</ul>-->
+<h3>Introducción a CSS - Presentación</h3>
+<ul>
+    <li>
+        <a href="https://youtu.be/Fsk06ZLCE2M" target="_blank">
+            <img src="https://img.youtube.com/vi/Fsk06ZLCE2M/0.jpg" alt="Introducción CSS" width="120" style="vertical-align:middle; margin-right:8px;">
+            Introducción CSS
+        </a>
+    </li>
+    <li>
+        <a href="https://youtu.be/O9FTMcgcaGA" target="_blank">
+            <img src="https://img.youtube.com/vi/O9FTMcgcaGA/0.jpg" alt="Sintaxis CSS" width="120" style="vertical-align:middle; margin-right:8px;">
+            Sintaxis CSS
+        </a>
+    </li>
+    <li>
+        <a href="https://youtu.be/JNIeQAuJaCM" target="_blank">
+            <img src="https://img.youtube.com/vi/JNIeQAuJaCM/0.jpg" alt="Selectores" width="120" style="vertical-align:middle; margin-right:8px;">
+            Selectores
+        </a>
+    </li>
+    <li>
+        <a href="https://youtu.be/MXo-i-9JRSY" target="_blank">
+            <img src="https://img.youtube.com/vi/MXo-i-9JRSY/0.jpg" alt="Presedencia" width="120" style="vertical-align:middle; margin-right:8px;">
+            Presedencia
+        </a>
+    </li>
+    <li>
+        <a href="https://youtu.be/aA2fMltFqN8" target="_blank">
+            <img src="https://img.youtube.com/vi/aA2fMltFqN8/0.jpg" alt="Box Model" width="120" style="vertical-align:middle; margin-right:8px;">
+            Box Model
+        </a>
+    </li>
+    <li>
+        <a href="https://youtu.be/mBz5dzsNazg" target="_blank">
+            <img src="https://img.youtube.com/vi/mBz5dzsNazg/0.jpg" alt="Weight - Height" width="120" style="vertical-align:middle; margin-right:8px;">
+            Weight - Height
+        </a>
+    </li>
+    <li>
+        <a href="https://youtu.be/5QPHenp9Cd8" target="_blank">
+            <img src="https://img.youtube.com/vi/5QPHenp9Cd8/0.jpg" alt="Margin - CSS" width="120" style="vertical-align:middle; margin-right:8px;">
+            Margin - CSS
+        </a>
+    </li>
+    <li>
+        <a href="https://youtu.be/c7-Y56Ndabo" target="_blank">
+            <img src="https://img.youtube.com/vi/c7-Y56Ndabo/0.jpg" alt="Padding" width="120" style="vertical-align:middle; margin-right:8px;">
+            Padding
+        </a>
+    </li>
+    <li>
+        <a href="https://youtu.be/FqMWxb7nzfQ" target="_blank">
+            <img src="https://img.youtube.com/vi/FqMWxb7nzfQ/0.jpg" alt="Border" width="120" style="vertical-align:middle; margin-right:8px;">
+            Border
+        </a>
+    </li>
+    <li>
+        <a href="https://youtu.be/aY0F_rT__fc" target="_blank">
+            <img src="https://img.youtube.com/vi/aY0F_rT__fc/0.jpg" alt="Display" width="120" style="vertical-align:middle; margin-right:8px;">
+            Display
+        </a>
+    </li>
+    <li>
+        <a href="https://youtu.be/fdsMgGuAHe8" target="_blank">
+            <img src="https://img.youtube.com/vi/fdsMgGuAHe8/0.jpg" alt="Float" width="120" style="vertical-align:middle; margin-right:8px;">
+            Float
+        </a>
+    </li>
+    <li>
+        <a href="https://youtu.be/r24lmXSGEQs" target="_blank">
+            <img src="https://img.youtube.com/vi/r24lmXSGEQs/0.jpg" alt="Flex Box" width="120" style="vertical-align:middle; margin-right:8px;">
+            Flex Box
+        </a>
+    </li>
+    <li>
+        <a href="https://youtu.be/Ow7MPzVUE4M" target="_blank">
+            <img src="https://img.youtube.com/vi/Ow7MPzVUE4M/0.jpg" alt="Bootstrap" width="120" style="vertical-align:middle; margin-right:8px;">
+            Bootstrap
+        </a>
+    </li>
+</ul>
+
+
 </body>
 </html>
