--- a/index.html
+++ b/index.html
@@ -316,7 +316,15 @@ cd SantexAcademy</code></pre>
     </li>
 </ul>
 
-
+<h3>Integración de Maquetado (Ejercicio de Integración)</h3>
+<ul>
+    <li><a href="https://youtu.be/f4E_6v6dzyk">Introducción a la maquetación</a></li>
+    <li><a href="https://youtu.be/T9VMdOwhaCs">Iconos</a></li>
+    <li><a href="https://youtu.be/OIEn36JHgf8">Header logo</a></li>
+    <li><a href="https://youtu.be/ZoYRR_UNJ6Q">Header menú</a></li>
+    <li><a href="https://youtu.be/KxphbGkVM08">Presentation content</a></li>
+    <li><a href="https://youtu.be/kKsL6B8IhqA">Features</a></li>
+</ul>
 
 
 </body>
