Add .txt,pdf,html, js

--- a/index.html
+++ b/index.html
@@ -43,6 +43,75 @@ Si todavía no lo hiciste, te invitamos a sumarte a nuestro espacio de Discord! 
         <li><a href="https://youtu.be/TolK85HGJE8?si=lPZ0_NuPfsmkAx_K">Webinar Lanzamiento - 07/08</a></li>
 
         <h2>Preacademy-PDFs</h2>
+      <h3>Linux</h3>
+<ol>
+    <li><a href="assets/01 - Instalación de Linux.pdf" download>01 - Instalación de Linux.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/01 - WSL.pdf" download>01 - WSL.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/02 - Terminal de Linux.pdf" download>02 - Terminal de Linux.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/1. Linux.docx.pdf" download>1. Linux.docx.pdf</a> — Archivo adjunto</li>
+</ol>
+
+<h3>Visual Studio Code</h3>
+<ol>
+    <li><a href="assets/03. Visual Studio Code.pdf" download>03. Visual Studio Code.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/05. Visual Studio Code + git.pdf" download>05. Visual Studio Code + git.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/5. Visual Studio Code.docx.pdf" download>5. Visual Studio Code.docx.pdf</a> — Archivo adjunto</li>
+</ol>
+
+<h3>Git</h3>
+<ol>
+    <li><a href="assets/04. Git.pdf" download>04. Git.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/2. Git.docx.pdf" download>2. Git.docx.pdf</a> — Archivo adjunto</li>
+</ol>
+
+<h3>Docker</h3>
+<ol>
+    <li><a href="assets/06. Introducción a Docker.pdf" download>06. Introducción a Docker.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/3. Docker.docx.pdf" download>3. Docker.docx.pdf</a> — Archivo adjunto</li>
+</ol>
+
+<h3>MySQL</h3>
+<ol>
+    <li><a href="assets/07. MySQL.pdf" download>07. MySQL.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/6. MySQL.docx.pdf" download>6. MySQL.docx.pdf</a> — Archivo adjunto</li>
+</ol>
+
+<h3>HTML y CSS</h3>
+<ol>
+    <li><a href="assets/7. HTML.docx.pdf" download>7. HTML.docx.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/8. CSS.docx.pdf" download>8. CSS.docx.pdf</a> — Archivo adjunto</li>
+</ol>
+
+<h3>JavaScript</h3>
+<ol>
+    <li><a href="assets/1.1 - Javascript y consola.pdf" download>1.1 - Javascript y consola.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/1.2 - Tipos de Datos, variables y constantes.pdf" download>1.2 - Tipos de Datos, variables y constantes.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/1.3 - Operadores.pdf" download>1.3 - Operadores.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/2.1 - Funciones.pdf" download>2.1 - Funciones.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/2.2 - Manejo de Errores.pdf" download>2.2 - Manejo de Errores.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/2.3 - Objetos y Clases.pdf" download>2.3 - Objetos y Clases.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/2.4 - Arrays.pdf" download>2.4 - Arrays.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/3.1 - Funciones Flecha y Callback.pdf" download>3.1 - Funciones Flecha y Callback.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/3.2 - Programacion Funcional.pdf" download>3.2 - Programacion Funcional.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/4.1 - Promesas, Async y await en Javascript.pdf" download>4.1 - Promesas, Async y await en Javascript.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/4.2 - Event Loop en Javascript.pdf" download>4.2 - Event Loop en Javascript.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/4.3 - Frameworks de Javascript.pdf" download>4.3 - Frameworks de Javascript.pdf</a> — Archivo adjunto</li>
+    <li><a href="assets/9. JavaScript.docx.pdf" download>9. JavaScript.docx.pdf</a> — Archivo adjunto</li>
+</ol>
+
+<h3>Ejercicios</h3>
+<ol>
+    <li><a href="assets/ejercicio-1.txt" download>ejercicio-1.txt</a> — Archivo adjunto</li>
+    <li><a href="assets/ejercicio-2.txt" download>ejercicio-2.txt</a> — Archivo adjunto</li>
+    <li><a href="assets/ejercicio-3.txt" download>ejercicio-3.txt</a> — Archivo adjunto</li>
+</ol>
+
+<h3>Extras</h3>
+<ol>
+    <li><a href="assets/Webinar Lanzamiento Dev.png" download>Webinar Lanzamiento Dev.png</a> — Archivo adjunto</li>
+    <li><a href="assets/XAcademy_Agilidad (1).pdf" download>XAcademy_Agilidad (1).pdf</a> — Archivo adjunto</li>
+</ol>
+
         <p>Test nivelatorio</p>
 
         <h2>Metodologías Ágiles</h2>
@@ -325,6 +394,27 @@ cd SantexAcademy</code></pre>
     <li><a href="https://youtu.be/KxphbGkVM08">Presentation content</a></li>
     <li><a href="https://youtu.be/kKsL6B8IhqA">Features</a></li>
 </ul>
+<h2>JavaScript - Fundamentos</h2>
+<h3>Introducción a JavaScript - Presentación</h3>
+    <ul>
+        <li><a href="https://youtu.be/60a_9C-4a0c" target="_blank">Presentación</a></li>
+        <li><a href="https://youtu.be/Eryi4jJfhiY" target="_blank">Introducción a Javascript</a></li>
+        <li><a href="https://youtu.be/Q-29mbusyZU" target="_blank">Consola Javascript</a></li>
+        <li><a href="https://youtu.be/rkup5bYyg1Y" target="_blank">Tipo de datos: variables y constantes</a></li>
+        <li><a href="https://youtu.be/CGnFdsN07C0" target="_blank">Variables y constantes</a></li>
+        <li><a href="https://youtu.be/jQ0ZnLdZ2OY" target="_blank">Operadores Javascript</a></li>
+        <li><a href="https://youtu.be/KfSGdWlFInc" target="_blank">Condicionales</a></li>
+        <li><a href="https://youtu.be/GiGsWnf-9Tg" target="_blank">Manejo de errores</a></li>
+        <li><a href="https://youtu.be/t22ZoaGL7N4" target="_blank">Arreglos</a></li>
+        <li><a href="https://youtu.be/u55tumlQ3uk" target="_blank">Objetos</a></li>
+        <li><a href="https://youtu.be/I1oQHRTnC9M" target="_blank">Bucles</a></li>
+        <li><a href="https://youtu.be/x0AeeCc3nmU" target="_blank">Clases</a></li>
+        <li><a href="https://youtu.be/Ch-WyYY1pOo" target="_blank">Interfaces</a></li>
+        <li><a href="https://youtu.be/3k4i9dejVjg" target="_blank">Callbacks - 2</a></li>
+        <li><a href="https://youtu.be/1FaA-DgP6x4" target="_blank">4.2 - Event Loop en Javascript</a></li>
+        <li><a href="https://youtu.be/YTZpVinoUtA" target="_blank">4.3 - Frameworks de Javascript</a></li>
+        <li><a href="https://youtu.be/qpgkTJdIhQk" target="_blank">BONUS: Async-Await - Promesas - Módulos- Intro a Frameworks</a></li>
+    </ul>
 
 
 </body>
