--- a/index.html
+++ b/index.html
@@ -417,5 +417,36 @@ cd SantexAcademy</code></pre>
     </ul>
 
 
+
+    <h2>Angular</h2>
+
+    <ul>
+        <li><a href="https://youtu.be/ezFDr9hdICY" target="_blank">Introducción a Angular</a></li>
+        <li><a href="https://youtu.be/PsjrCOBA76c" target="_blank">Instalación del entorno</a></li>
+        <li><a href="https://youtu.be/5gSYs6R4oJI" target="_blank">Estructura del proyecto</a></li>
+        <li><a href="https://youtu.be/YTXjZAYV-RM" target="_blank">Angular - funcionamiento general</a></li>
+        <li><a href="https://youtu.be/KqfxOljtAiA" target="_blank">Encapsulación</a></li>
+        <li><a href="https://youtu.be/xkScMx-WV5o" target="_blank">Atribute Binding</a></li>
+        <li><a href="https://youtu.be/oLxF6UJM0qk" target="_blank">Directivas</a></li>
+        <li><a href="https://youtu.be/N8kPnuCNGcA" target="_blank">Componentes básicos</a></li>
+        <li><a href="https://youtu.be/id97W4vimJA" target="_blank">Componentes - comunicación</a></li>
+        <li><a href="https://youtu.be/QkqBVRJcNa0" target="_blank">Ciclo de vida</a></li>
+        <li><a href="https://youtu.be/Ec2XTm0OKho" target="_blank">Primer ejercicio</a></li>
+        <li><a href="https://youtu.be/0UhXxENhZLg" target="_blank">Solución ejercicio parte 1 - Estructura</a></li>
+        <li><a href="https://youtu.be/sQStOrJFOq4" target="_blank">Solución ejercicio parte 2 - Separación</a></li>
+        <li><a href="https://youtu.be/9K15frOyRyU" target="_blank">Solución ejercicio parte 3 - Optimización</a></li>
+        <li><a href="https://youtu.be/-B5QTCsU56M" target="_blank">Routing</a></li>
+        <li><a href="https://youtu.be/Ch-WyYY1pOo" target="_blank">Interfaces</a></li>
+        <li><a href="https://youtu.be/XrtYYNyg960" target="_blank">Servicios 1</a></li>
+        <li><a href="https://youtu.be/QbLrPw6BblI" target="_blank">Observables 1</a></li>
+        <li><a href="https://youtu.be/zJftTNJlAkQ" target="_blank">HTTP Client - 1</a></li>
+        <li><a href="https://youtu.be/nH2sINN1T1M" target="_blank">API de práctica 1</a></li>
+        <li><a href="https://youtu.be/oBAVvvLl-u4" target="_blank">Template forms básicos</a></li>
+        <li><a href="https://youtu.be/MX6MJM6BVQs" target="_blank">Template forms - estado y validación 1</a></li>
+        <li><a href="https://youtu.be/KWaCZKp9S2s" target="_blank">Reactive forms - Básico</a></li>
+        <li><a href="https://youtu.be/r2BaZQKOOKk?si=9rdsCPTjhWvHwNRY" target="_blank">Reactiveforms Avanzado Parte 1</a></li>
+        <li><a href="https://youtu.be/YxFv0mMwcmg?si=L_dIEfKKGdyESIMS" target="_blank">Reactiveforms Avanzado Parte 2</a></li>
+    </ul>
+
 </body>
 </html>
