--- a/index.html
+++ b/index.html
@@ -448,5 +448,36 @@ cd SantexAcademy</code></pre>
         <li><a href="https://youtu.be/YxFv0mMwcmg?si=L_dIEfKKGdyESIMS" target="_blank">Reactiveforms Avanzado Parte 2</a></li>
     </ul>
 
+
+
+    <h2> Node JS - Prerrequisitos: Herramientas de Desarrollo, JavaScript</h2>
+
+    <ul>
+        <li><a href="https://youtu.be/Vi3AbcerzZ4" target="_blank">Introducción Node JS</a></li>
+        <li><a href="https://github.com/nvm-sh/nvm" target="_blank">Instalador MacOS y Linux</a></li>
+        <li><a href="https://github.com/coreybutler/nvm-windows" target="_blank">Instalador Windows</a></li>
+        <li><a href="https://youtu.be/OawkM-tkiWo?si=a5fr_YY96LDu3FNs" target="_blank">Instalación Node JS Windows NUEVO</a></li>
+        <li><a href="https://nodejs.org/en/about/previous-releases" target="_blank">Versiones de Node JS</a></li>
+        <li><a href="https://youtu.be/LfAEqTnvgl8?si=NoJaf86u8AsGMn6l" target="_blank">Hola mundo NUEVO</a></li>
+        <li><a href="https://youtu.be/oLxF6UJM0qk" target="_blank">Directivas</a></li>
+        <li><a href="https://youtu.be/N8kPnuCNGcA" target="_blank">Componentes básicos</a></li>
+        <li><a href="https://youtu.be/id97W4vimJA" target="_blank">Componentes - comunicación</a></li>
+        <li><a href="https://youtu.be/QkqBVRJcNa0" target="_blank">Ciclo de vida</a></li>
+        <li><a href="https://youtu.be/Ec2XTm0OKho" target="_blank">Primer ejercicio</a></li>
+        <li><a href="https://youtu.be/0UhXxENhZLg" target="_blank">Solución ejercicio parte 1 - Estructura</a></li>
+        <li><a href="https://youtu.be/sQStOrJFOq4" target="_blank">Solución ejercicio parte 2 - Separación</a></li>
+        <li><a href="https://youtu.be/9K15frOyRyU" target="_blank">Solución ejercicio parte 3 - Optimización</a></li>
+        <li><a href="https://youtu.be/-B5QTCsU56M" target="_blank">Routing</a></li>
+        <li><a href="https://youtu.be/Ch-WyYY1pOo" target="_blank">Interfaces</a></li>
+        <li><a href="https://youtu.be/XrtYYNyg960" target="_blank">Servicios 1</a></li>
+        <li><a href="https://youtu.be/QbLrPw6BblI" target="_blank">Observables 1</a></li>
+        <li><a href="https://youtu.be/zJftTNJlAkQ" target="_blank">HTTP Client - 1</a></li>
+        <li><a href="https://youtu.be/nH2sINN1T1M" target="_blank">API de práctica 1</a></li>
+        <li><a href="https://youtu.be/oBAVvvLl-u4" target="_blank">Template forms básicos</a></li>
+        <li><a href="https://youtu.be/MX6MJM6BVQs" target="_blank">Template forms - estado y validación 1</a></li>
+        <li><a href="https://youtu.be/KWaCZKp9S2s" target="_blank">Reactive forms - Básico</a></li>
+        <li><a href="https://youtu.be/r2BaZQKOOKk?si=9rdsCPTjhWvHwNRY" target="_blank">Reactiveforms Avanzado Parte 1</a></li>
+        <li><a href="https://youtu.be/YxFv0mMwcmg?si=L_dIEfKKGdyESIMS" target="_blank">Reactiveforms Avanzado Parte 2</a></li>
+    </ul>
 </body>
 </html>
