--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@ cd SantexAcademy</code></pre>
         <li><a href="https://youtu.be/OawkM-tkiWo?si=a5fr_YY96LDu3FNs" target="_blank">Instalación Node JS Windows NUEVO</a></li>
         <li><a href="https://nodejs.org/en/about/previous-releases" target="_blank">Versiones de Node JS</a></li>
         <li><a href="https://youtu.be/LfAEqTnvgl8?si=NoJaf86u8AsGMn6l" target="_blank">Hola mundo NUEVO</a></li>
-        <li><a href="https://youtu.be/oLxF6UJM0qk" target="_blank">Directivas</a></li>
+        <li><a href="https://youtu.be/321wW8JEdhw" target="_blank">Módulos fs http 1 1</a></li>
         <li><a href="https://youtu.be/N8kPnuCNGcA" target="_blank">Componentes básicos</a></li>
         <li><a href="https://youtu.be/id97W4vimJA" target="_blank">Componentes - comunicación</a></li>
         <li><a href="https://youtu.be/QkqBVRJcNa0" target="_blank">Ciclo de vida</a></li>
