--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ cd SantexAcademy</code></pre>
         <li><a href="https://youtu.be/LfAEqTnvgl8?si=NoJaf86u8AsGMn6l" target="_blank">Hola mundo NUEVO</a></li>
         <li><a href="https://youtu.be/321wW8JEdhw" target="_blank">Módulos fs http 1 1</a></li>
         <li><a href="https://youtu.be/fKi8Y_1mPP0" target="_blank">Express 1</a></li>
-        <li><a href="https://youtu.be/id97W4vimJA" target="_blank">Componentes - comunicación</a></li>
+        <li><a href="https://youtu.be/eIOdub9nzLQ" target="_blank">Express Arquitectura 1</a></li>
         <li><a href="https://youtu.be/QkqBVRJcNa0" target="_blank">Ciclo de vida</a></li>
         <li><a href="https://youtu.be/Ec2XTm0OKho" target="_blank">Primer ejercicio</a></li>
         <li><a href="https://youtu.be/0UhXxENhZLg" target="_blank">Solución ejercicio parte 1 - Estructura</a></li>
