--- a/index.html
+++ b/index.html
@@ -462,9 +462,9 @@ cd SantexAcademy</code></pre>
         <li><a href="https://youtu.be/321wW8JEdhw" target="_blank">Módulos fs http 1 1</a></li>
         <li><a href="https://youtu.be/fKi8Y_1mPP0" target="_blank">Express 1</a></li>
         <li><a href="https://youtu.be/eIOdub9nzLQ" target="_blank">Express Arquitectura 1</a></li>
-        <li><a href="https://youtu.be/QkqBVRJcNa0" target="_blank">Ciclo de vida</a></li>
-        <li><a href="https://youtu.be/Ec2XTm0OKho" target="_blank">Primer ejercicio</a></li>
-        <li><a href="https://youtu.be/0UhXxENhZLg" target="_blank">Solución ejercicio parte 1 - Estructura</a></li>
+        <li><a href="https://youtu.be/IDASZX6utv4" target="_blank">Axios 1</a></li>
+        <li><a href="https://youtu.be/HyRAQ8gBTTY" target="_blank">ORM Sequelize</a></li>
+        <li><a href="https://youtu.be/auw0Q1ab2VM?si=B4WIWqU0tYCyZGMR" target="_blank">ORM Sequelize NUEVO</a></li>
         <li><a href="https://youtu.be/sQStOrJFOq4" target="_blank">Solución ejercicio parte 2 - Separación</a></li>
         <li><a href="https://youtu.be/9K15frOyRyU" target="_blank">Solución ejercicio parte 3 - Optimización</a></li>
         <li><a href="https://youtu.be/-B5QTCsU56M" target="_blank">Routing</a></li>
