--- a/index.html
+++ b/index.html
@@ -187,20 +187,20 @@ done
 
 <h2> HTML - Prerrequisitos: Herramientas de Desarrollo</h2>
 <h3>Introducción a HTML - Presentación</h3>
-        <li><a href="https://youtu.be/e1LddVt7Azc">HTML - Introducción</a></li>
-        <li><a href="https://youtu.be/hi9ZJFjETh4">Elementos HTML</a></li>
-        <li><a href="https://youtu.be/r4Ltowz9cYU">Tipos de elementos HTML</a></li>
-        <li><a href="https://youtu.be/b456BfLTI9U">Estructura HTML</a></li>
-        <li><a href="https://youtu.be/TYEEpRcr7Rw">Contenedores Semánticos HTML</a></li>
-        <li><a href="https://youtu.be/YaDKeEDe6zI">Texto - HTML</a></li>
-        <li><a href="https://youtu.be/Lb5jRc-TRVI">Listas HTML</a></li>
-        <li><a href="https://youtu.be/6UG3oH60b8E">Tablas HTML</a></li>
-        <li><a href="https://youtu.be/6TYhRANwHJk">Formularios 1</a></li>
-        <li><a href="https://youtu.be/g0iHMCPSpwI">Formularios 2</a></li>
-        <li><a href="https://youtu.be/gXW5-2tDz58">Formularios 3</a></li>
-        <li><a href="https://youtu.be/M_dlIcmp4jM">Formularios 4</a></li>
-        <li><a href="https://youtu.be/EP3t0lc6aaY">Formularios 5</a></li>
-        <li><a href="https://youtu.be/nuOQCSSoa5Y">Hipervínculos HTML</a></li>
+        <li><a href="https://youtu.be/e1LddVt7Azc" target="_blank">HTML - Introducción</a></li>
+        <li><a href="https://youtu.be/hi9ZJFjETh4" target="_blank">Elementos HTML</a></li>
+        <li><a href="https://youtu.be/r4Ltowz9cYU" target="_blank">Tipos de elementos HTML</a></li>
+        <li><a href="https://youtu.be/b456BfLTI9U" target="_blank">Estructura HTML</a></li>
+        <li><a href="https://youtu.be/TYEEpRcr7Rw" target="_blank">Contenedores Semánticos HTML</a></li>
+        <li><a href="https://youtu.be/YaDKeEDe6zI" target="_blank">Texto - HTML</a></li>
+        <li><a href="https://youtu.be/Lb5jRc-TRVI" target="_blank">Listas HTML</a></li>
+        <li><a href="https://youtu.be/6UG3oH60b8E" target="_blank">Tablas HTML</a></li>
+        <li><a href="https://youtu.be/6TYhRANwHJk" target="_blank">Formularios 1</a></li>
+        <li><a href="https://youtu.be/g0iHMCPSpwI" target="_blank">Formularios 2</a></li>
+        <li><a href="https://youtu.be/gXW5-2tDz58" target="_blank">Formularios 3</a></li>
+        <li><a href="https://youtu.be/M_dlIcmp4jM" target="_blank">Formularios 4</a></li>
+        <li><a href="https://youtu.be/EP3t0lc6aaY" target="_blank">Formularios 5</a></li>
+        <li><a href="https://youtu.be/nuOQCSSoa5Y" target="_blank">Hipervínculos HTML</a></li>
         
     </ul>
 
@@ -387,12 +387,12 @@ cd SantexAcademy</code></pre>
 
 <h3>Integración de Maquetado (Ejercicio de Integración)</h3>
 <ul>
-    <li><a href="https://youtu.be/f4E_6v6dzyk">Introducción a la maquetación</a></li>
-    <li><a href="https://youtu.be/T9VMdOwhaCs">Iconos</a></li>
-    <li><a href="https://youtu.be/OIEn36JHgf8">Header logo</a></li>
-    <li><a href="https://youtu.be/ZoYRR_UNJ6Q">Header menú</a></li>
-    <li><a href="https://youtu.be/KxphbGkVM08">Presentation content</a></li>
-    <li><a href="https://youtu.be/kKsL6B8IhqA">Features</a></li>
+    <li><a href="https://youtu.be/f4E_6v6dzyk" target="_blank">Introducción a la maquetación</a></li>
+    <li><a href="https://youtu.be/T9VMdOwhaCs" target="_blank">Iconos</a></li>
+    <li><a href="https://youtu.be/OIEn36JHgf8" target="_blank">Header logo</a></li>
+    <li><a href="https://youtu.be/ZoYRR_UNJ6Q" target="_blank">Header menú</a></li>
+    <li><a href="https://youtu.be/KxphbGkVM08" target="_blank">Presentation content</a></li>
+    <li><a href="https://youtu.be/kKsL6B8IhqA" target="_blank">Features</a></li>
 </ul>
 <h2>JavaScript - Fundamentos</h2>
 <h3>Introducción a JavaScript - Presentación</h3>
@@ -465,19 +465,10 @@ cd SantexAcademy</code></pre>
         <li><a href="https://youtu.be/IDASZX6utv4" target="_blank">Axios 1</a></li>
         <li><a href="https://youtu.be/HyRAQ8gBTTY" target="_blank">ORM Sequelize</a></li>
         <li><a href="https://youtu.be/auw0Q1ab2VM?si=B4WIWqU0tYCyZGMR" target="_blank">ORM Sequelize NUEVO</a></li>
-        <li><a href="https://youtu.be/sQStOrJFOq4" target="_blank">Solución ejercicio parte 2 - Separación</a></li>
-        <li><a href="https://youtu.be/9K15frOyRyU" target="_blank">Solución ejercicio parte 3 - Optimización</a></li>
-        <li><a href="https://youtu.be/-B5QTCsU56M" target="_blank">Routing</a></li>
-        <li><a href="https://youtu.be/Ch-WyYY1pOo" target="_blank">Interfaces</a></li>
-        <li><a href="https://youtu.be/XrtYYNyg960" target="_blank">Servicios 1</a></li>
-        <li><a href="https://youtu.be/QbLrPw6BblI" target="_blank">Observables 1</a></li>
-        <li><a href="https://youtu.be/zJftTNJlAkQ" target="_blank">HTTP Client - 1</a></li>
-        <li><a href="https://youtu.be/nH2sINN1T1M" target="_blank">API de práctica 1</a></li>
-        <li><a href="https://youtu.be/oBAVvvLl-u4" target="_blank">Template forms básicos</a></li>
-        <li><a href="https://youtu.be/MX6MJM6BVQs" target="_blank">Template forms - estado y validación 1</a></li>
-        <li><a href="https://youtu.be/KWaCZKp9S2s" target="_blank">Reactive forms - Básico</a></li>
-        <li><a href="https://youtu.be/r2BaZQKOOKk?si=9rdsCPTjhWvHwNRY" target="_blank">Reactiveforms Avanzado Parte 1</a></li>
-        <li><a href="https://youtu.be/YxFv0mMwcmg?si=L_dIEfKKGdyESIMS" target="_blank">Reactiveforms Avanzado Parte 2</a></li>
+        <li><a href="https://youtu.be/VIZJLTzLelc?si=3DiYdHdIiNBKjcUw" target="_blank">Introducción y presentación Marcos</a></li>
+        <li><a href="https://youtu.be/6nE02Qs-st4?si=enfuVpcynDbanNk_" target="_blank">Introducción a QA</a></li>
+        <li><a href="https://youtu.be/YoAkjeAz28w?si=n7NJWzQVTv_ATl5q" target="_blank">QA - parte II</a></li>
+       
     </ul>
 </body>
 </html>
