--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@ Si todavía no lo hiciste, te invitamos a sumarte a nuestro espacio de Discord! 
 
 
         <h2>Introducción a las bases de datos</h2>
-        <li><a href="https://youtu.be/j6Mz9P1pKzo">Introducción a las bases de datos</a></li>
-        <li><a href="https://youtu.be/EZBrZBzEAdk">Instalación MySQL</a></li>
-        <li><a href="https://youtu.be/rYhs2A7JFtg">MySQL - Parte 1</a></li>
-        <li><a href="https://youtu.be/heA8qCkLYkk">MySQL - Parte 2</a></li>
+        <li><a href="https://youtu.be/j6Mz9P1pKzo" target="_blank">Introducción a las bases de datos</a></li>
+        <li><a href="https://youtu.be/EZBrZBzEAdk" target="_blank">Instalación MySQL</a></li>
+        <li><a href="https://youtu.be/rYhs2A7JFtg" target="_blank">MySQL - Parte 1</a></li>
+        <li><a href="https://youtu.be/heA8qCkLYkk" target="_blank">MySQL - Parte 2</a></li>
 
         <h2>Tarea</h2>
         <p>
