--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@ Si todavía no lo hiciste, te invitamos a sumarte a nuestro espacio de Discord! 
         <li><a href="https://youtu.be/MDHLsp7lIC0">Git - parte 3</a></li>
 
         <h2>Docker</h2>
-        <li><a href="https://youtu.be/_AD95efE2PU">Docker - Intro</a></li>
-        <li><a href="https://youtu.be/zxrYh5kOym4">Docker - Arquitectura de Servidores</a></li>
-        <li><a href="https://youtu.be/gdMD0MVbMfk">Docker - Virtualización</a></li>
+        <li><a href="https://youtu.be/_AD95efE2PU" target="_blank">Docker - Intro</a></li>
+        <li><a href="https://youtu.be/zxrYh5kOym4" target="_blank">Docker - Arquitectura de Servidores</a></li>
+        <li><a href="https://youtu.be/gdMD0MVbMfk" target="_blank">Docker - Virtualización</a></li>
 
 
         <h2>Introducción a las bases de datos</h2>
