--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@ Si todavía no lo hiciste, te invitamos a sumarte a nuestro espacio de Discord! 
 
         <h2>Herramientas de desarrolo - Prerrequisitos: Metodologías Ágiles</h2>
         <h3>Entornos de desarrollo: Linux/Windows y Ubuntu</h3>
-        <li><a href="https://youtu.be/xjqrcPUCxGI">Introducción a las herramientas de desarrollo</a></li>
-        <li><a href="https://youtu.be/WcYe6lkMSQs">Instalación Ubuntu en Linux y Windows</a></li>
-        <li><a href="https://youtu.be/5gfC_6FHrNg">Visual Studio Code</a></li>
-        <li><a href="https://youtu.be/aW3ttI91Qkk">Git - parte 1</a></li>
-        <li><a href="https://youtu.be/PAHKkaZ-U4s">Git - parte 2</a></li>
-        <li><a href="https://youtu.be/MDHLsp7lIC0">Git - parte 3</a></li>
+        <li><a href="https://youtu.be/xjqrcPUCxGI" target="_blank">Introducción a las herramientas de desarrollo</a></li>
+        <li><a href="https://youtu.be/WcYe6lkMSQs" target="_blank">Instalación Ubuntu en Linux y Windows</a></li>
+        <li><a href="https://youtu.be/5gfC_6FHrNg" target="_blank">Visual Studio Code</a></li>
+        <li><a href="https://youtu.be/aW3ttI91Qkk" target="_blank">Git - parte 1</a></li>
+        <li><a href="https://youtu.be/PAHKkaZ-U4s" target="_blank">Git - parte 2</a></li>
+        <li><a href="https://youtu.be/MDHLsp7lIC0" target="_blank">Git - parte 3</a></li>
 
         <h2>Docker</h2>
         <li><a href="https://youtu.be/_AD95efE2PU" target="_blank">Docker - Intro</a></li>
