--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@ Si todavía no lo hiciste, te invitamos a sumarte a nuestro espacio de Discord! 
 
         <h2>Metodologías Ágiles</h2>
         
-        <li><a href="https://youtu.be/DjK-lt59FNg">Metodologías Ágiles-intro</a></li>
-        <li><a href="https://youtu.be/kS-M4BrE3EU">Parte 1 - Marco de Trabajo Ágil</a></li>
-        <li><a href="https://youtu.be/p_XB9umck74">Parte 2 - Marco de Trabajo Ágil</a></li>
+        <li><a href="https://youtu.be/DjK-lt59FNg" target="_blank">Metodologías Ágiles-intro</a></li>
+        <li><a href="https://youtu.be/kS-M4BrE3EU" target="_blank">Parte 1 - Marco de Trabajo Ágil</a></li>
+        <li><a href="https://youtu.be/p_XB9umck74" target="_blank">Parte 2 - Marco de Trabajo Ágil</a></li>
 
 
         <h2>Herramientas de desarrolo - Prerrequisitos: Metodologías Ágiles</h2>
