--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ Si todavía no lo hiciste, te invitamos a sumarte a nuestro espacio de Discord! 
     <ul>
         
         <h2>Introducción a XAcademy - Nuestros objetivos</h2>
-        <li><a href="https://youtu.be/HMFPhGbEaxc">Presentación y bienvenida</a></li>
-        <li><a href="https://youtu.be/E42o29zyW5I">Objetivos de XAcademy</a></li>
-        <li><a href="https://youtu.be/Bwby-h0sbLw">XAcademy - nuestro programa de formación en tecnología</a></li>
-        <li><a href="https://youtu.be/TolK85HGJE8?si=lPZ0_NuPfsmkAx_K">Webinar Lanzamiento - 07/08</a></li>
+        <li><a href="https://youtu.be/HMFPhGbEaxc" target="_blank">Presentación y bienvenida</a></li>
+        <li><a href="https://youtu.be/E42o29zyW5I" target="_blank">Objetivos de XAcademy</a></li>
+        <li><a href="https://youtu.be/Bwby-h0sbLw" target="_blank">XAcademy - nuestro programa de formación en tecnología</a></li>
+        <li><a href="https://youtu.be/TolK85HGJE8?si=lPZ0_NuPfsmkAx_K" target="_blank">Webinar Lanzamiento - 07/08</a></li>
 
         <h2>Preacademy-PDFs</h2>
       <h3>Linux</h3>
