--- a/index.html
+++ b/index.html
@@ -470,5 +470,27 @@ cd SantexAcademy</code></pre>
         <li><a href="https://youtu.be/YoAkjeAz28w?si=n7NJWzQVTv_ATl5q" target="_blank">QA - parte II</a></li>
        
     </ul>
+
+
+     <h2> FASE 1 - Proyectos - Prerrequisitos: Herramientas de Desarrollo, JavaScript, Angular, Node JS</h2>
+
+    <ul>
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+       
+    </ul>
 </body>
 </html>
