--- a/index.html
+++ b/index.html
@@ -475,8 +475,8 @@ cd SantexAcademy</code></pre>
      <h2> FASE 1 - Proyectos - Prerrequisitos: Herramientas de Desarrollo, JavaScript, Angular, Node JS</h2>
 
     <ul>
-        <li><a href="" target="_blank"></a></li>
-        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank">Pautas para la realización del challenge XAcademy.pdf</a></li>
+        <li><a href="" target="_blank">Challenge XAcademy DEV.pdf</a></li>
         <li><a href="" target="_blank"></a></li>
         <li><a href="" target="_blank"></a></li>
         <li><a href="" target="_blank"></a></li>
