--- a/index.html
+++ b/index.html
@@ -479,17 +479,10 @@ cd SantexAcademy</code></pre>
         <li><a href="" target="_blank">Challenge XAcademy DEV.pdf</a></li>
         <li><a href="" target="_blank">female_players.csv</a></li>
         <li><a href="" target="_blank">fifa_female_players.sql</a></li>
-        <li><a href="" target="_blank"></a></li>
-        <li><a href="" target="_blank"></a></li>
-        <li><a href="" target="_blank"></a></li>
-        <li><a href="" target="_blank"></a></li>
-        <li><a href="" target="_blank"></a></li>
-        <li><a href="" target="_blank"></a></li>
-        <li><a href="" target="_blank"></a></li>
-        <li><a href="" target="_blank"></a></li>
-        <li><a href="" target="_blank"></a></li>
-        <li><a href="" target="_blank"></a></li>
-        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank">fifa_male_players.sql</a></li>
+        <li><a href="" target="_blank">male_players.csv</a></li>
+        <li><a href="" target="_blank">Template demo XAcademy.pdf</a></li>
+
        
     </ul>
 </body>
